--- a/myfile.html
+++ b/myfile.html
@@ -5,8 +5,8 @@
     <title>myfile</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="D:\downloads\Новая папка (2)\web\html\myfile\myfile.css">
-  <link rel="favicon icon" href="D:\downloads\Новая папка (2)\web\html\favicon.ico">
+    <link rel="stylesheet" type="text/css" href="myfile.css">
+  <link rel="favicon icon" href="favicon.ico">
   </head>
   <body>
 <div class="high_container">
