--- a/myfile.html
+++ b/myfile.html
@@ -46,8 +46,8 @@
   <div class="contact-me">
     <h2 id="endh2">Get In Touch</h2>
 
-    <p class=andparagraf> if you are interested in programming exactly web programming , contact me.</p>
-    <p class=andparagraf>Because I`m currently looking for partner for work as a team.</p>
+    <p class="andparagraf"> if you are interested in programming exactly web programming , contact me.</p>
+    <p class="andparagraf">Because I`m currently looking for partner for work as a team.</p>
 
     <div class="buttonc">
 
